--- a/css/ebook-site.webflow.css
+++ b/css/ebook-site.webflow.css
@@ -11,3 +11,12 @@
   width: 100%;
   height: 100%;
 }
+
+.left-side {
+  width: 45%;
+  padding: 3%;
+  background-color: #d6d6d3;
+  background-image: url('../images/banner4.png');
+  background-position: 50% 50%;
+  background-size: cover;
+}
