--- a/css/ebook-site.webflow.css
+++ b/css/ebook-site.webflow.css
@@ -77,7 +77,7 @@
   top: 0px;
   right: 0px;
   bottom: 0px;
-  background-color: rgba(0, 0, 0, .34);
+  background-color: rgba(0, 0, 0, .49);
   color: #000;
 }
 
@@ -137,11 +137,15 @@
   top: 0px;
   bottom: 0px;
   z-index: 999;
+  display: none;
   overflow: scroll;
   width: 45%;
   height: auto;
   padding: 3%;
   background-color: #fff;
+  -webkit-transform: translate(-100%, 0px);
+  -ms-transform: translate(-100%, 0px);
+  transform: translate(-100%, 0px);
 }
 
 .chapters-thumbnail {
