--- a/css/ebook-site.webflow.css
+++ b/css/ebook-site.webflow.css
@@ -1,3 +1,53 @@
+h3 {
+  margin-top: 20px;
+  margin-bottom: 10px;
+  color: #0a0a0a;
+  font-size: 24px;
+  line-height: 30px;
+  font-weight: 600;
+  letter-spacing: 0px;
+}
+
+h4 {
+  margin-top: 10px;
+  margin-bottom: 10px;
+  font-size: 18px;
+  line-height: 24px;
+  font-weight: 700;
+}
+
+p {
+  margin-bottom: 10px;
+  font-size: 16px;
+  line-height: 22px;
+  font-weight: 400;
+}
+
+a {
+  color: #59abd1;
+  font-size: 14px;
+  font-weight: 400;
+  text-decoration: none;
+}
+
+a:hover {
+  color: #ee3b66;
+}
+
+strong {
+  font-weight: bold;
+}
+
+blockquote {
+  margin-bottom: 10px;
+  padding: 10px 30px;
+  border-left: 5px solid #e2e2e2;
+  color: #617ab1;
+  font-size: 18px;
+  line-height: 22px;
+  font-weight: 200;
+}
+
 .page-wrapper {
   position: absolute;
   left: 0px;
@@ -10,7 +60,7 @@
   display: flex;
   width: 100%;
   height: 100%;
-  background-color: #fff;
+  background-color: #d3f0f0;
 }
 
 .left-side {
@@ -31,11 +81,54 @@
   background-size: cover;
 }
 
+.ch12 {
+  position: fixed;
+  left: 0px;
+  top: 0px;
+  bottom: 0px;
+  display: none;
+  overflow: scroll;
+  height: 100vh;
+  min-width: 55%;
+  margin-top: 0px;
+  margin-bottom: 0%;
+  padding: 3% 0%;
+  -webkit-box-pack: justify;
+  -webkit-justify-content: space-between;
+  -ms-flex-pack: justify;
+  justify-content: space-between;
+  -webkit-box-flex: 1;
+  -webkit-flex: 1;
+  -ms-flex: 1;
+  flex: 1;
+  background-color: #fff;
+  opacity: 1;
+  -webkit-backface-visibility: visible;
+  backface-visibility: visible;
+  -webkit-transform: translate(-250%, 0px);
+  -ms-transform: translate(-250%, 0px);
+  transform: translate(-250%, 0px);
+}
+
+.ch12._12 {
+  display: block;
+  -webkit-transform: translate(-111%, 0px);
+  -ms-transform: translate(-111%, 0px);
+  transform: translate(-111%, 0px);
+}
+
+.ch12._11 {
+  -webkit-transform: translate(83%, 0px);
+  -ms-transform: translate(83%, 0px);
+  transform: translate(83%, 0px);
+}
+
 .content-wrapper {
   display: block;
   max-width: 560px;
   margin-right: auto;
   margin-left: auto;
+  padding: auto;
 }
 
 .content-wrapper.centercontent {
@@ -142,6 +235,7 @@
   width: 45%;
   height: auto;
   padding: 3%;
+  border: 2px solid #79e0cc;
   background-color: #fff;
   -webkit-transform: none;
   -ms-transform: none;
@@ -153,7 +247,7 @@
   height: 90px;
   margin-right: 20px;
   float: left;
-  background-image: url('../images/images_1.jpeg');
+  background-image: url('../images/images.jpeg');
   background-position: 50% 50%;
   background-size: 130px;
   background-repeat: no-repeat;
@@ -220,13 +314,21 @@
 }
 
 .chapters-thumbnail.freelance {
-  background-image: url('../images/images.jpeg');
+  background-image: url('../images/images_1.jpeg');
   background-position: 50% 50%;
   background-size: cover;
 }
 
 .chapters-thumbnail.marketing {
   background-image: url('../images/13fec407a671b2756c1ffbed3a067073.jpg');
+  background-position: 50% 50%;
+  background-size: cover;
+  background-repeat: no-repeat;
+}
+
+.chapters-thumbnail.responsive {
+  background-image: url('../images/3fd054a.jpg');
+  background-position: 50% 50%;
   background-size: cover;
 }
 
@@ -290,7 +392,7 @@
   color: #2a312c;
 }
 
-.link-chapters {
+.link-chapters-2 {
   display: block;
   padding-right: 0px;
 }
@@ -317,5 +419,332 @@
 .close:hover {
   font-family: Nunito, sans-serif;
   color: #0a0a0a;
+}
+
+.right-content-wrapper {
+  position: static;
+  display: block;
+  padding: auto;
+  background-color: #081118;
+}
+
+.content-wrapper-right {
+  display: block;
+  margin-right: auto;
+  margin-left: auto;
+  padding: auto;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+  -webkit-flex-direction: column;
+  -ms-flex-direction: column;
+  flex-direction: column;
+  -webkit-box-pack: justify;
+  -webkit-justify-content: space-between;
+  -ms-flex-pack: justify;
+  justify-content: space-between;
+}
+
+.top-content {
+  margin-bottom: 30px;
+}
+
+.top-link {
+  display: inline-block;
+  margin-right: 20px;
+  font-family: Nunito, sans-serif;
+  color: #8f8f8f;
+  font-weight: 600;
+  text-transform: uppercase;
+}
+
+.top-link.amazon {
+  float: right;
+  color: #23c5a5;
+  text-decoration: none;
+}
+
+.article-text {
+  font-family: Nunito, sans-serif;
+  font-size: 17px;
+  line-height: 26px;
+  font-weight: 400;
+}
+
+.rich-text {
+  position: static;
+  overflow: visible;
+  height: 100vh;
+  margin-right: 0px;
+  margin-bottom: 0px;
+  padding: 3% 0% 3% 0px;
+  font-family: Nunito, sans-serif;
+  color: #171817;
+  font-size: 13px;
+  font-weight: 200;
+  text-decoration: none;
+}
+
+.rich-text.link {
+  color: #0e0f0e;
+}
+
+.text-holder {
+  margin-bottom: 0px;
+  padding-bottom: 0px;
+}
+
+.chapter-11 {
+  display: none;
+  background-color: #fff;
+  -webkit-transform: translate(-20px, 0px);
+  -ms-transform: translate(-20px, 0px);
+  transform: translate(-20px, 0px);
+}
+
+.chapter-12 {
+  display: block;
+}
+
+.chapter-10 {
+  display: block;
+  -webkit-transform: translate(-18px, 0px);
+  -ms-transform: translate(-18px, 0px);
+  transform: translate(-18px, 0px);
+}
+
+.ch11 {
+  position: fixed;
+  left: 0px;
+  top: 0px;
+  bottom: 0px;
+  z-index: 2;
+  display: none;
+  overflow: scroll;
+  height: 100vh;
+  min-width: 55%;
+  padding-top: 3%;
+  padding-right: 0%;
+  padding-bottom: 3%;
+  -webkit-box-flex: 1;
+  -webkit-flex-grow: 1;
+  -ms-flex-positive: 1;
+  flex-grow: 1;
+  background-color: #fff;
+  -webkit-transform: translate(-250%, 0px);
+  -ms-transform: translate(-250%, 0px);
+  transform: translate(-250%, 0px);
+}
+
+.ch10 {
+  position: fixed;
+  left: 0px;
+  top: 0px;
+  bottom: 0px;
+  display: none;
+  overflow: scroll;
+  height: 100vh;
+  min-width: 55%;
+  padding-top: 3%;
+  padding-bottom: 3%;
+  background-color: #fff;
+  -webkit-transform: translate(-250%, 0px);
+  -ms-transform: translate(-250%, 0px);
+  transform: translate(-250%, 0px);
+}
+
+.ch9 {
+  position: fixed;
+  left: 0px;
+  top: 0px;
+  bottom: 0px;
+  overflow: scroll;
+  height: 100vh;
+  min-width: 55%;
+  padding-top: 3%;
+  padding-bottom: 3%;
+  background-color: #fff;
+  -webkit-transform: translate(-250%, 0px);
+  -ms-transform: translate(-250%, 0px);
+  transform: translate(-250%, 0px);
+}
+
+.ch8 {
+  position: fixed;
+  left: 0px;
+  top: 0px;
+  bottom: 0px;
+  display: none;
+  overflow: scroll;
+  height: 100vh;
+  min-width: 55%;
+  padding-top: 3%;
+  padding-bottom: 3%;
+  background-color: #fff;
+  -webkit-transform: translate(-250%, 0px);
+  -ms-transform: translate(-250%, 0px);
+  transform: translate(-250%, 0px);
+}
+
+.ch7 {
+  position: fixed;
+  left: 0px;
+  top: 0px;
+  bottom: 0px;
+  display: none;
+  overflow: scroll;
+  height: 100vh;
+  min-width: 55%;
+  padding-top: 3%;
+  padding-bottom: 3%;
+  background-color: #fff;
+  -webkit-transform: translate(-250%, 0px);
+  -ms-transform: translate(-250%, 0px);
+  transform: translate(-250%, 0px);
+}
+
+.ch6 {
+  position: fixed;
+  left: 0px;
+  top: 0px;
+  bottom: 0px;
+  display: none;
+  overflow: scroll;
+  height: 100vh;
+  min-width: 55%;
+  padding-top: 3%;
+  padding-bottom: 3%;
+  background-color: #fff;
+  -webkit-transform: translate(-250%, 0px);
+  -ms-transform: translate(-250%, 0px);
+  transform: translate(-250%, 0px);
+}
+
+.ch5 {
+  position: fixed;
+  left: 0px;
+  top: 0px;
+  bottom: 0px;
+  display: none;
+  overflow: scroll;
+  height: 100vh;
+  min-width: 55%;
+  padding-top: 3%;
+  padding-bottom: 3%;
+  background-color: #fff;
+  -webkit-transform: translate(-250%, 0px);
+  -ms-transform: translate(-250%, 0px);
+  transform: translate(-250%, 0px);
+}
+
+.ch4 {
+  position: fixed;
+  left: 0px;
+  top: 0px;
+  bottom: 0px;
+  display: none;
+  overflow: scroll;
+  height: 100vh;
+  min-width: 55%;
+  padding-top: 3%;
+  padding-bottom: 3%;
+  background-color: #fff;
+  -webkit-transform: translate(-250%, 0px);
+  -ms-transform: translate(-250%, 0px);
+  transform: translate(-250%, 0px);
+}
+
+.ch3 {
+  position: fixed;
+  left: 0px;
+  top: 0px;
+  bottom: 0px;
+  display: none;
+  overflow: scroll;
+  height: 100vh;
+  min-width: 55%;
+  padding-top: 3%;
+  padding-bottom: 3%;
+  background-color: #fff;
+  -webkit-transform: translate(-250%, 0px);
+  -ms-transform: translate(-250%, 0px);
+  transform: translate(-250%, 0px);
+}
+
+.ch2 {
+  position: fixed;
+  left: 0px;
+  top: 0px;
+  bottom: 0px;
+  display: none;
+  overflow: scroll;
+  height: 100vh;
+  min-width: 55%;
+  padding-top: 3%;
+  padding-bottom: 3%;
+  background-color: #fff;
+  -webkit-transform: translate(-250%, 0px);
+  -ms-transform: translate(-250%, 0px);
+  transform: translate(-250%, 0px);
+}
+
+.ch1 {
+  position: fixed;
+  left: 0px;
+  top: 0px;
+  bottom: 0px;
+  display: none;
+  overflow: scroll;
+  height: 100vh;
+  min-width: 55%;
+  padding-top: 3%;
+  padding-bottom: 3%;
+  background-color: #fff;
+  -webkit-transform: translate(-250%, 0px);
+  -ms-transform: translate(-250%, 0px);
+  transform: translate(-250%, 0px);
+}
+
+.link-ch2 {
+  display: block;
+}
+
+.link-ch3 {
+  display: block;
+}
+
+.link-ch4 {
+  display: block;
+}
+
+.link-ch5 {
+  display: block;
+}
+
+.link-ch6 {
+  display: block;
+}
+
+.link-ch7 {
+  display: block;
+}
+
+.link-ch8 {
+  display: block;
+}
+
+.link-ch9 {
+  display: block;
+}
+
+.link-ch10 {
+  display: block;
+}
+
+.link-ch11 {
+  display: block;
+}
+
+.link-ch12 {
+  display: block;
 }
 
