--- a/css/ebook-site.webflow.css
+++ b/css/ebook-site.webflow.css
@@ -83,8 +83,8 @@ blockquote {
 
 .ch12 {
   position: fixed;
-  left: 0px;
   top: 0px;
+  right: 0px;
   bottom: 0px;
   display: none;
   overflow: scroll;
@@ -105,9 +105,6 @@ blockquote {
   opacity: 1;
   -webkit-backface-visibility: visible;
   backface-visibility: visible;
-  -webkit-transform: translate(-250%, 0px);
-  -ms-transform: translate(-250%, 0px);
-  transform: translate(-250%, 0px);
 }
 
 .ch12._12 {
@@ -230,16 +227,16 @@ blockquote {
   top: 0px;
   bottom: 0px;
   z-index: 999;
-  display: block;
+  display: none;
   overflow: scroll;
   width: 45%;
   height: auto;
   padding: 3%;
   border: 2px solid #79e0cc;
   background-color: #fff;
-  -webkit-transform: none;
-  -ms-transform: none;
-  transform: none;
+  -webkit-transform: translate(-100%, 0px);
+  -ms-transform: translate(-100%, 0px);
+  transform: translate(-100%, 0px);
 }
 
 .chapters-thumbnail {
@@ -394,6 +391,8 @@ blockquote {
 
 .link-chapters-2 {
   display: block;
+  width: auto;
+  min-width: 100%;
   padding-right: 0px;
 }
 
@@ -514,8 +513,8 @@ blockquote {
 
 .ch11 {
   position: fixed;
-  left: 0px;
   top: 0px;
+  right: 0px;
   bottom: 0px;
   z-index: 2;
   display: none;
@@ -530,15 +529,12 @@ blockquote {
   -ms-flex-positive: 1;
   flex-grow: 1;
   background-color: #fff;
-  -webkit-transform: translate(-250%, 0px);
-  -ms-transform: translate(-250%, 0px);
-  transform: translate(-250%, 0px);
 }
 
 .ch10 {
   position: fixed;
-  left: 0px;
   top: 0px;
+  right: 0px;
   bottom: 0px;
   display: none;
   overflow: scroll;
@@ -547,31 +543,26 @@ blockquote {
   padding-top: 3%;
   padding-bottom: 3%;
   background-color: #fff;
-  -webkit-transform: translate(-250%, 0px);
-  -ms-transform: translate(-250%, 0px);
-  transform: translate(-250%, 0px);
 }
 
 .ch9 {
   position: fixed;
-  left: 0px;
   top: 0px;
+  right: 0px;
   bottom: 0px;
+  display: none;
   overflow: scroll;
   height: 100vh;
   min-width: 55%;
   padding-top: 3%;
   padding-bottom: 3%;
   background-color: #fff;
-  -webkit-transform: translate(-250%, 0px);
-  -ms-transform: translate(-250%, 0px);
-  transform: translate(-250%, 0px);
 }
 
 .ch8 {
   position: fixed;
-  left: 0px;
   top: 0px;
+  right: 0px;
   bottom: 0px;
   display: none;
   overflow: scroll;
@@ -580,15 +571,12 @@ blockquote {
   padding-top: 3%;
   padding-bottom: 3%;
   background-color: #fff;
-  -webkit-transform: translate(-250%, 0px);
-  -ms-transform: translate(-250%, 0px);
-  transform: translate(-250%, 0px);
 }
 
 .ch7 {
   position: fixed;
-  left: 0px;
   top: 0px;
+  right: 0px;
   bottom: 0px;
   display: none;
   overflow: scroll;
@@ -597,15 +585,12 @@ blockquote {
   padding-top: 3%;
   padding-bottom: 3%;
   background-color: #fff;
-  -webkit-transform: translate(-250%, 0px);
-  -ms-transform: translate(-250%, 0px);
-  transform: translate(-250%, 0px);
 }
 
 .ch6 {
   position: fixed;
-  left: 0px;
   top: 0px;
+  right: 0px;
   bottom: 0px;
   display: none;
   overflow: scroll;
@@ -614,15 +599,12 @@ blockquote {
   padding-top: 3%;
   padding-bottom: 3%;
   background-color: #fff;
-  -webkit-transform: translate(-250%, 0px);
-  -ms-transform: translate(-250%, 0px);
-  transform: translate(-250%, 0px);
 }
 
 .ch5 {
   position: fixed;
-  left: 0px;
   top: 0px;
+  right: 0px;
   bottom: 0px;
   display: none;
   overflow: scroll;
@@ -631,15 +613,12 @@ blockquote {
   padding-top: 3%;
   padding-bottom: 3%;
   background-color: #fff;
-  -webkit-transform: translate(-250%, 0px);
-  -ms-transform: translate(-250%, 0px);
-  transform: translate(-250%, 0px);
 }
 
 .ch4 {
   position: fixed;
-  left: 0px;
   top: 0px;
+  right: 0px;
   bottom: 0px;
   display: none;
   overflow: scroll;
@@ -648,15 +627,12 @@ blockquote {
   padding-top: 3%;
   padding-bottom: 3%;
   background-color: #fff;
-  -webkit-transform: translate(-250%, 0px);
-  -ms-transform: translate(-250%, 0px);
-  transform: translate(-250%, 0px);
 }
 
 .ch3 {
   position: fixed;
-  left: 0px;
   top: 0px;
+  right: 0px;
   bottom: 0px;
   display: none;
   overflow: scroll;
@@ -665,32 +641,26 @@ blockquote {
   padding-top: 3%;
   padding-bottom: 3%;
   background-color: #fff;
-  -webkit-transform: translate(-250%, 0px);
-  -ms-transform: translate(-250%, 0px);
-  transform: translate(-250%, 0px);
 }
 
 .ch2 {
   position: fixed;
-  left: 0px;
   top: 0px;
+  right: 0px;
   bottom: 0px;
-  display: none;
+  display: block;
   overflow: scroll;
   height: 100vh;
   min-width: 55%;
   padding-top: 3%;
   padding-bottom: 3%;
   background-color: #fff;
-  -webkit-transform: translate(-250%, 0px);
-  -ms-transform: translate(-250%, 0px);
-  transform: translate(-250%, 0px);
 }
 
 .ch1 {
   position: fixed;
-  left: 0px;
   top: 0px;
+  right: 0px;
   bottom: 0px;
   display: none;
   overflow: scroll;
@@ -699,9 +669,6 @@ blockquote {
   padding-top: 3%;
   padding-bottom: 3%;
   background-color: #fff;
-  -webkit-transform: translate(-250%, 0px);
-  -ms-transform: translate(-250%, 0px);
-  transform: translate(-250%, 0px);
 }
 
 .link-ch2 {
