--- a/css/ebook-site.webflow.css
+++ b/css/ebook-site.webflow.css
@@ -38,6 +38,11 @@ strong {
   font-weight: bold;
 }
 
+em {
+  color: #b8b8b8;
+  font-style: italic;
+}
+
 blockquote {
   margin-bottom: 10px;
   padding: 10px 30px;
@@ -125,7 +130,6 @@ blockquote {
   max-width: 560px;
   margin-right: auto;
   margin-left: auto;
-  padding: auto;
 }
 
 .content-wrapper.centercontent {
@@ -227,16 +231,16 @@ blockquote {
   top: 0px;
   bottom: 0px;
   z-index: 999;
-  display: none;
+  display: block;
   overflow: scroll;
   width: 45%;
   height: auto;
   padding: 3%;
   border: 2px solid #79e0cc;
   background-color: #fff;
-  -webkit-transform: translate(-100%, 0px);
-  -ms-transform: translate(-100%, 0px);
-  transform: translate(-100%, 0px);
+  -webkit-transform: none;
+  -ms-transform: none;
+  transform: none;
 }
 
 .chapters-thumbnail {
@@ -477,8 +481,9 @@ blockquote {
   margin-bottom: 0px;
   padding: 3% 0% 3% 0px;
   font-family: Nunito, sans-serif;
-  color: #171817;
+  color: #414141;
   font-size: 14px;
+  font-style: normal;
   font-weight: 500;
   text-decoration: none;
 }
@@ -592,7 +597,7 @@ blockquote {
   top: 0px;
   right: 0px;
   bottom: 0px;
-  display: none;
+  display: block;
   overflow: scroll;
   height: 100vh;
   min-width: 55%;
@@ -609,6 +614,7 @@ blockquote {
   display: none;
   overflow: scroll;
   height: 100vh;
+  min-height: 100%;
   min-width: 55%;
   padding-top: 3%;
   padding-bottom: 3%;
@@ -665,6 +671,7 @@ blockquote {
   display: none;
   overflow: scroll;
   height: 100vh;
+  min-height: 100%;
   min-width: 55%;
   padding-top: 3%;
   padding-bottom: 3%;
