--- a/css/ebook-site.webflow.css
+++ b/css/ebook-site.webflow.css
@@ -178,15 +178,15 @@ blockquote {
   width: 200px;
   height: 200px;
   margin-top: 30px;
-  margin-bottom: 10px;
+  margin-bottom: 15px;
   border-radius: 95px;
 }
 
 .author-name {
   font-family: Nunito, sans-serif;
   color: #fff;
-  font-size: 12px;
-  font-weight: 400;
+  font-size: 20px;
+  font-weight: 700;
 }
 
 .logo {
@@ -210,18 +210,22 @@ blockquote {
 
 .chapters-link {
   position: absolute;
-  left: 70px;
+  left: 90px;
+  right: 90px;
   bottom: 6%;
   display: block;
-  padding-left: 38px;
+  padding-top: 30px;
+  padding-bottom: 30px;
   background-color: #fff;
   background-image: url('../images/web-page-menu-icon-75688.png');
-  background-position: 8px 50%;
-  background-size: 20px;
+  background-position: 35px 50%;
+  background-size: 10%;
   background-repeat: no-repeat;
   font-family: Nunito, sans-serif;
   color: rgba(37, 37, 37, .84);
-  font-weight: 300;
+  font-size: 25px;
+  font-weight: 700;
+  text-align: center;
   text-transform: capitalize;
 }
 
